remove sign-in title for login navbar

--- a/Public/login.html
+++ b/Public/login.html
@@ -32,10 +32,8 @@
         <div class="divider-filler"></div>
       </div>
 
-      <div class="coloured-section">
-        <p class="nav-sign-in">Sign in</p>
-      </div>
-
+      <div class="coloured-section"></div>
+      
     </div>
   </nav>
 
@@ -71,7 +69,6 @@
     <section class="sign-up">
       <!-- ================================= Sign up =================================== -->
       <h4>Not a member?</h4>
-      <p></p>
       <button id="join-btn" class="btn">
         <i class="material-icons right">arrow_drop_down</i>Join right now
       </button>
@@ -107,7 +104,7 @@
           <label for="sign-up-last-name">last name</label>
         </div>
 
-        <small class="small-text">Your name is used to author any recipes you create!</small>
+        <small class="small-text">Your name is used to identify any recipes you create!</small>
   
         <!-- submit button -->
         <button id="sign-up-btn" type="submit" class="btn">
