UPDATE index.html, added multiple select options for cuisine and diet, removed unecessary grid divs

--- a/Public/index.html
+++ b/Public/index.html
@@ -19,7 +19,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="./assets/css/index.css"/> 
     <link rel="stylesheet" href="./assets/css/tabs.css"/> 
-    <link rel="stylesheet" href="./assets/css/delete-button.css"/> 
+    <link rel="stylesheet" href="./assets/css/buttons.css"/> 
     <link rel="stylesheet" href="./assets/css/nav.css"/> 
   </head> 
   <body>
@@ -52,77 +52,125 @@
 
         <!--Main Body Container w/Grids-->
         <div class="row">
-            <div class="col s12">
-              <div class="row z-depth-5">
+          <div class="col s12 z-depth-5" style="padding:0;">
+            <!-- Tabbed headers -->
+            <ul class="tabs">
+              <li class="tab col s6">
+                <a class="a-tab-left"href="#search-bar" class="class text-darken-4">Recipe Search</a>
+              </li>
+              <li class="tab col s6">
+                <a class="a-tab-right" href="#fridge-search" class="class text-darken-4">In the fridge?</a>
+              </li>
+            </ul>
 
-                <!-- Tabbed headers -->
-                <ul class="tabs">
-                  <li class="tab col s6">
-                    <a class="a-tab-left"href="#search-bar" class="class text-darken-4">Recipe Search</a>
-                  </li>
-                  <li class="tab col s6">
-                    <a class="a-tab-right" href="#fridge-search" class="class text-darken-4">In the fridge?</a>
-                  </li>
-                </ul>
+            <!-- search bar -->
+            <fieldset id="search-bar">
+                <!-- main search bar -->
+                <form>
+                  <div class="input-field main-search-bar">
+                    <input type="text" id="search-query">
+                    <label for="search-query">Search recipes here!</label>
+                    <i id="search-button" class="material-icons">search</i>
+                  </div>
+                </form>
 
-                <!-- search bar -->
-                <fieldset class="col s12" id="search-bar">
+                <!-- ADVANCED SEARCH BUTTON -->
+                <button id="advanced-search-button" class="waves-effect waves-light btn" value="false">advanced</button>
 
-                    <form class="row">
-                        <div class="input-field main-search-bar">
-                          <input type="text" id="search-query">
-                          <label for="search-query">Search recipes here!</label>
-                          <i id="search-button" class="material-icons">search</i>
-                        </div>
-                    </form>
-                    <!-- ADVANCED SEARCH BUTTON -->
-                    <button id="advanced-search-button" class="waves-effect waves-light btn" value="false">advanced</button>
-                    <!-- dropdown box for advanced search-->
-                    <form id="advanced-search">
-                      <!-- Cuisine filter -->
-                      <div class="input-field">
-                        <input type="text" id="cuisine">
-                        <label for="cuisine">cuisine</label>
-                      </div>
-                      <!-- Diet filter  -->
-                      <div class="input-field">
-                        <input type="text" id="diet">
-                        <label for="diet">Diet</label>
-                      </div>
-                      <!-- Exclude certain ingredients -->
-                      <div class="input-field">
-                        <input type="text" id="exclude-ingredients">
-                        <label for="exclude-ingredients">excluding ingredients</label>
-                      </div>
+                <!-- dropdown box for advanced search-->
+                <form id="advanced-search">
 
-                    </form>
+                  <!-- Cuisine filter -->
+                  <div class="input-field">
+                    <select multiple>
+                      <option value="" disabled selected>Cuisines:</option>
+                      <option value="0">Australian</option>
+                      <option value="1">African</option>
+                      <option value="2">American</option>
+                      <option value="3">British</option>
+                      <option value="4">Cajun</option>
+                      <option value="5">Caribbean</option>
+                      <option value="6">Chinese</option>
+                      <option value="7">Eastern European</option>
+                      <option value="8">European</option>
+                      <option value="9">French</option>
+                      <option value="10">German</option>
+                      <option value="11">Greek</option>
+                      <option value="12">Indian</option>
+                      <option value="13">Irish</option>
+                      <option value="14">Italian</option>
+                      <option value="15">Japenese</option>
+                      <option value="16">Jewish</option>
+                      <option value="17">Korean</option>
+                      <option value="18">Latin American</option>
+                      <option value="19">Malaysian</option>
+                      <option value="20">Mediterranean</option>
+                      <option value="21">Mexican</option>
+                      <option value="22">Middle Eastern</option>
+                      <option value="23">Nordic</option>
+                      <option value="24">Singaporean</option>
+                      <option value="25">Southern</option>
+                      <option value="26">Spanish</option>
+                      <option value="27">Swedish</option>
+                      <option value="28">Thai</option>
+                      <option value="29">Vietnamese</option>
+                    </select>
+                    <label for="cuisine">Cuisine</label>
+                  </div>
 
-                </fieldset>
-                <!-- what's in my fridge -->
-                <fieldset class="col s12" id="fridge-search">
+                  <!-- Diet filter  -->
+                  <div class="input-field">
+                    <select multiple>
+                      <option value="" disabled selected>Diets:</option>
+                      <option value="1">Gluten free</option>
+                      <option value="2">Vegan</option>
+                      <option value="3">Vegetarien</option>
+                      <option value="4">Pescetarian</option>
+                      <option value="5">Paleo</option>
+                      <option value="6">Primal</option>
+                      <option value="7">Whole30</option>
+                      <option value="8">Ketogenic</option>
+                      <option value="9">lacto-vegetarian</option>
+                      <option value="10">ovo-vegetarian</option>
+                    </select>
+                    <label for="diet">Diet</label>
+                  </div>
 
-                  <h5>
-                    What's in your fridge?
-                  </h5>
-                  <p>
-                    you're only limited by:
-                  </p>
-                  <ul>
-                    <li>
-                      The contents of your fridge and pantry.
-                    </li>
-                    <li>
-                      How many of those items you can be bothered typing in.
-                    </li>
-                    <div class="fridge-input-wrapper">
-                        <div class="chips"></div>
-                    </div>
-                  </ul>
+                  <!-- Exclude certain ingredients -->
+                  <div class="input-field">
+                    <input type="text" id="exclude-ingredients">
+                    <label for="exclude-ingredients">exclude these ingredients</label>
+                  </div>
 
-                </fieldset>
-              </div>
-            </div>
+                </form>
+
+            </fieldset>
+            
+            <!-- what's in my fridge -->
+            <fieldset class="col s12" id="fridge-search">
+
+              <h5>
+                What's in your fridge?
+              </h5>
+              <p>
+                you're only limited by:
+              </p>
+              <ul>
+                <li>
+                  1.) The actual contents of your fridge and pantry.
+                </li>
+                <li>
+                  2.) How many of those items you can be bothered typing in.
+                </li>
+                <div class="fridge-input-wrapper">
+                    <div class="chips"></div>
+                </div>
+              </ul>
+
+            </fieldset>
+          </div>
         </div>
+
         <div class="row">
           <!--This is where the cards will be displayed sequentially-->
           <div class="col s12">
@@ -134,7 +182,8 @@
           </div>
           
         </div>
-      </div>
+
+      </div> <!--End container--> 
 
       <section id="modal-goes-here"></section>
 
