moved search down page, background as white for now

--- a/Public/index.html
+++ b/Public/index.html
@@ -64,7 +64,7 @@
                 <a class="a-tab-left"href="#search-bar" class="class text-darken-4">Recipe Search</a>
               </li>
               <li class="tab col s6">
-                <a class="a-tab-right" href="#fridge-search" class="class text-darken-4">In the fridge?</a>
+                <a class="a-tab-right" href="#fridge-search" class="class text-darken-4">In my fridge?</a>
               </li>
             </ul>
 
@@ -77,11 +77,6 @@
                   <label for="search-query">Search recipes here!</label>
                   <i id="search-button" class="material-icons">search</i>
                 </div>
-                <!-- <div class="input-field main-search-bar">
-                  <input type="text" id="search-query">
-                  <label for="search-query">Search recipes here!</label>
-                  <i id="search-button" class="material-icons">search</i>
-                </div> -->
               </section>
 
               <!-- ADVANCED SEARCH BUTTON -->
