--- a/Public/recipe-modal.html
+++ b/Public/recipe-modal.html
@@ -15,7 +15,7 @@
 <body>
     <div class="modal-container">
 
-        <div class="modal-body">
+        <div class="recipe-modal">
     
             <button class='delete-button'>
                 <i class='tiny material-icons'>close</i>
