added flip animation to shopping

--- a/Public/shopping-list.html
+++ b/Public/shopping-list.html
@@ -126,7 +126,7 @@
                 <!-- container BACK (change menu icon is list icon) -->
                 <div id="back" class="container">
                     <!-- select button for which recipes to buy for -->
-                    <div class="input-field">
+                    <div class="input-field which-recipes-container">
                         <select name="" id="which-recipes" multiple>
                             <option value="" disabled>Items:</option>
                             <option value="1">This week's meal plan</option>
@@ -242,5 +242,6 @@
     <script src="./assets/javascript/spinner.js"></script>   
     <script src="./assets/javascript/search.js"></script>   
     <script src="./assets/javascript/openModal.js"></script>
+    <script src="./assets/javascript/shopping-list-logic.js"></script>
 </body>
 </html>
