rough draft for create-recipe-modal

--- a/Public/index.html
+++ b/Public/index.html
@@ -223,6 +223,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!-- custom js -->
+    <script src="./assets/javascript/removeInitialChips.js"></script>
     <script src="./assets/javascript/activateTabs.js"></script>   
     <script src="./assets/javascript/spinner.js"></script>   
     <script src="./assets/javascript/search.js"></script>   
