add function to dynamically add ingredients to the form

--- a/Public/shopping-list.html
+++ b/Public/shopping-list.html
@@ -34,7 +34,7 @@
     <!-- modal -->
     <div class="modal-container">
         <!-- modal body -->
-        <div class="shopping-list-modal">
+        <div class="shopping-list-modal z-depth-5">
 
                 <!-- delete button -->
                 <button class='nude-button top-right close-button'>
