delete methods for removing added dynamic content

--- a/Public/create-recipe.html
+++ b/Public/create-recipe.html
@@ -167,7 +167,7 @@
                 <section class="row">
                     <h5 class="center-align">Alright, tell us how to cook it</h5>
                     <!-- ingredient container -->
-                    <div class="col s12 l5">
+                    <div class="col s12 m6 l5 xl4">
                         <!-- ingredient title -->
                         <h4>Ingredients</h4>
                         
@@ -209,7 +209,7 @@
                         </div>
                     </div>
                     <!-- Method container -->
-                    <div class="col s12 l7">
+                    <div class="col s12 m6 l7 xl8">
                         <!-- method title -->
                         <h4>Method</h4>
                         <!-- ul element body -->
@@ -219,8 +219,8 @@
                         </ul>
                         <!-- input to add steps -->
                         <div class="input-field">
-                            <textarea id="textarea1" class="materialize-textarea"></textarea>
-                            <label for="textarea1">Step 1</label>
+                            <textarea id="add-step" class="materialize-textarea" data-count="1"></textarea>
+                            <label for="add-step" id="add-step-label">Step 1</label>
                             <button class="add-step-button" type="button">
                                 <i class="material-icons zero right">add</i>Add Step
                             </button>
