--- a/Public/create-recipe.html
+++ b/Public/create-recipe.html
@@ -250,12 +250,7 @@ first get the lobster and crack the ehad open and scoop all that white fleshy me
 <script src="./assets/javascript/dashboard-logic.js"></script>
 <script src="./assets/javascript/openModal.js"></script>
 <script src="./assets/javascript/removeInitialChips.js"></script>
-<script src="./assets/javascript/create-recipe-form/create-recipe-logic.js"></script>
-<script src="./assets/javascript/create-recipe-form/create-recipe-logic.js"></script>
-<script src="./assets/javascript/create-recipe-form/create-recipe-logic.js"></script>
-<script src="./assets/javascript/create-recipe-form/create-recipe-logic.js"></script>
-<script src="./assets/javascript/create-recipe-form/create-recipe-logic.js"></script>
-<script src="./assets/javascript/create-recipe-form/index.js"></script>
+<script id="index" src="./assets/javascript/create-recipe-form/index.js"></script>
 
 
 </body>
