added aws s3 image integration

--- a/Public/dashboard.html
+++ b/Public/dashboard.html
@@ -297,7 +297,7 @@
         </div>
         
         <div id="create-recipe-section">
-            <button id="create-recipe" class="footer-button z-depth-2">
+            <button id="publish-recipe" class="footer-button z-depth-2">
                 <i class="material-icons right">create</i> Add Recipe
             </button>
         </div>
