--- a/Public/create-recipe.html
+++ b/Public/create-recipe.html
@@ -65,7 +65,7 @@
                     <div class="file-field input-field feature-left">
                         <div class="btn">
                             <span>image</span>
-                            <input type="file">
+                            <input type="file" accept="image/*">
                         </div>
                         <div class="file-path-wrapper">
                             <input class="file-path validate" type="text" id="create-image">
