--- a/Public/create-recipe.html
+++ b/Public/create-recipe.html
@@ -231,7 +231,7 @@
 
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button id="publish-button" type="submit">
+                        <button id="publish-button" type="button">
                             <i class="medium material-icons right">publish</i>Publish
                         </button>
                     </div>
